--- a/about.html
+++ b/about.html
@@ -198,8 +198,8 @@
                 <h6 class="text-uppercase open-sans-font text-center mt-2 mt-sm-4">html</h6>
             </div>
             <div class="col-6 col-md-3 mb-3 mb-sm-5">
-                <div class="c100 p62">
-                    <span>62</span>
+                <div class="c100 p52">
+                    <span>52%</span>
                     <div class="slice">
                         <div class="bar"></div>
                         <div class="fill"></div>
