--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <img src="img/img-mobile.jpg" class="img-fluid main-img-mobile d-none d-sm-block d-lg-none" alt="my picture" />
                 <h6 class="text-uppercase open-sans-font mb-0 d-block d-sm-none d-lg-block">hi there !</h6>
                 <h1 class="text-uppercase poppins-font"><span>I'm</span> Shibil</h1>
-                <p class="open-sans-font">I'm a Electrical and Electronic engineering but I love to code</p>
+                <p class="open-sans-font"></p>
                 <a href="about.html" class="btn btn-about">more about me</a>
             </div>
         </div>
